--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <button class="button">
   抽出一句屬於你的金句
 </button>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMnMakcbNpLStUwep8wadlsyTKbifL35_eNwEHtgPht2E4WA/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-  
-  
+<a href="javascript: void(window.open(&apos;https://lineit.line.me/share/ui?url=https://forms.gle/iw44nSq9ViipdnJi9; .concat(encodeURIComponent(location.href)) ));" title="分享給 LINE 好友"><img alt="分享給LINE好友 !" height="40" src="https://1.bp.blogspot.com/-FvoBw8lnlC8/WHgA91RmxiI/AAAAAAAAIvA/CazIGx6Jlp8PJ4pE40kt2XMxwFmeBSdjgCLcB/s1600/168x40.png" width="168" /></a>
   </body>
   <script src="index.js"></script>
+
+  
   </html>
 
