--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <button class="button">
   抽出一句屬於你的金句
 </button>
-<a href="javascript: void(window.open(&apos;https://lineit.line.me/share/ui?url=https://forms.gle/iw44nSq9ViipdnJi9; .concat(encodeURIComponent(location.href)) ));" title="分享給 LINE 好友"><img alt="分享給LINE好友 !" height="40" src="https://1.bp.blogspot.com/-FvoBw8lnlC8/WHgA91RmxiI/AAAAAAAAIvA/CazIGx6Jlp8PJ4pE40kt2XMxwFmeBSdjgCLcB/s1600/168x40.png" width="168" /></a>
+<a href="http://line.naver.jp/R/msg/text/?峰值體驗好書，分享給您！%0D%0Ahttps://forms.gle/oFW47tGAocuBf4LW9">
+  <img src="https://1.bp.blogspot.com/-FvoBw8lnlC8/WHgA91RmxiI/AAAAAAAAIvA/CazIGx6Jlp8PJ4pE40kt2XMxwFmeBSdjgCLcB/s1600/168x40.png" />
+  </a>
   </body>
   <script src="index.js"></script>
 
