文字訊息、line圖示更新

--- a/index.html
+++ b/index.html
@@ -17,19 +17,34 @@
   <body>
       
 <div class="container">
-    <h1 class="title">峰值體驗50+金句</h1>
-    <div class="sentence_box">
-        <div class="sentence">選對戰場，是一個將軍最重要的職責，在那個戰場，你可以獲得勝利。</div>
-    </div>
-<button class="button">
-  抽出一句屬於你的金句
-</button>
-<a href="http://line.naver.jp/R/msg/text/?峰值體驗好書，分享給您！%0D%0Ahttps://forms.gle/oFW47tGAocuBf4LW9">
+ 
+<!-- <a href="http://line.naver.jp/R/msg/text/?峰值體驗好書，分享給您！%0D%0Ahttps://docs.google.com/forms/d/e/1FAIpQLScxnutPo86H9xbAhxqWcF9L8yKHyaBX-b4cXHM5e2QkLvsb6g/viewform">
   <img src="https://1.bp.blogspot.com/-FvoBw8lnlC8/WHgA91RmxiI/AAAAAAAAIvA/CazIGx6Jlp8PJ4pE40kt2XMxwFmeBSdjgCLcB/s1600/168x40.png" />
-  </a>
+  </a> -->
+  <div class="content">
+    在送出禮物前<br>
+    請您調整呼吸<br>
+    回想在2021這一年<br> 
+    和這位好友的關鍵時刻<br>
+    <br>
+    他在何時拉了您關鍵的一把<br>
+    曾經在哪裡一起並肩作戰<br>
+    共同創造了哪些珍貴價值<br>
+    <br>
+    邀請您將這些感動化為文字<br>
+    在歲末之時 將對朋友的感謝與祝福<br>
+    與《峰值體驗》一併奉上<br>
+    打造屬於您的峰值體驗
+  </div>
+  <a href="https://social-plugins.line.me/lineit/share?url=https%3A%2F%2Fforms.gle/bxZ6GDpKEU1zwbDK9&text=
+  我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A
+  因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A
+  讓我們在品牌發展路上、學習路上，一起走。">
+    <img class="line_icon" src="./line_icon.svg"/>
+    </a>
   </body>
   <script src="index.js"></script>
-
+  <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
   
   </html>
 
