--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
     與《峰值體驗》一併奉上<br>
     打造屬於您的峰值體驗
   </div>
-  <a href="https://social-plugins.line.me/lineit/share?url=https%3A%2F%2Fforms.gle/bxZ6GDpKEU1zwbDK9&text=
+  <!-- <a href="https://social-plugins.line.me/lineit/share?url=https%3A%2F%2Fforms.gle/bxZ6GDpKEU1zwbDK9&text=
   我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A
   因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A
-  讓我們在品牌發展路上、學習路上，一起走。">
+  讓我們在品牌發展路上、學習路上，一起走。"> -->
+  <a href="https://social-plugins.line.me/lineit/share?url=https%3A%2F%2Fforms.gle/bxZ6GDpKEU1zwbDK9&text=te">
     <img class="line_icon" src="./line_icon.svg"/>
     </a>
   </body>
-  <script src="index.js"></script>
-  <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
   
   </html>
 
