綜合測試兩種

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       
 <div class="container">
  
-<!-- <a href="http://line.naver.jp/R/msg/text/?峰值體驗好書，分享給您！%0D%0Ahttps://docs.google.com/forms/d/e/1FAIpQLScxnutPo86H9xbAhxqWcF9L8yKHyaBX-b4cXHM5e2QkLvsb6g/viewform">
+<a href="http://line.naver.jp/R/msg/text/?峰值體驗好書，分享給您！%0D%0Ahttps://docs.google.com/forms/d/e/1FAIpQLScxnutPo86H9xbAhxqWcF9L8yKHyaBX-b4cXHM5e2QkLvsb6g/viewform">
   <img src="https://1.bp.blogspot.com/-FvoBw8lnlC8/WHgA91RmxiI/AAAAAAAAIvA/CazIGx6Jlp8PJ4pE40kt2XMxwFmeBSdjgCLcB/s1600/168x40.png" />
-  </a> -->
+  </a>
   <div class="content">
     在送出禮物前<br>
     請您調整呼吸<br>
@@ -40,10 +40,7 @@
     我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A
     因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A
     讓我們在品牌發展路上、學習路上，一起走。"> -->
-    <a href="http://line.naver.jp/R/msg/text/?
-    我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A
-    因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A
-    讓我們在品牌發展路上、學習路上，一起走。%0D%0Ahttps://forms.gle/bxZ6GDpKEU1zwbDK9">
+    <a href="http://line.naver.jp/R/msg/text/? 我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A讓我們在品牌發展路上、學習路上，一起走。%0D%0Ahttps://forms.gle/bxZ6GDpKEU1zwbDK9">
     <img class="line_icon" src="./line_icon.svg"/>
     </a>
   </body>
