--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <a href="http://line.naver.jp/R/msg/text/? 我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A讓我們在品牌發展路上、學習路上，一起走。%0D%0Ahttps://forms.gle/bxZ6GDpKEU1zwbDK9">
     <img class="line_icon" src="./line_icon.svg"/>
     </a>
+    <div class="message">
+      點選 Line 分享連結後，您可以選擇一位好友，<br>
+      將收禮資訊傳送給他，<br>
+      順道附上對好友一年來的感謝
+    </div>
   </body>
   
   </html>
