--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     與《峰值體驗》一併奉上<br>
     打造屬於您的峰值體驗
   </div>
+       <!-- <a href="https://social-plugins.line.me/lineit/share?url=https%3A%2F%2Fforms.gle%2FJ3JTXA2Mx6UcX9Wv5&text=我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A
+    因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A讓我們在品牌發展路上、學習路上，一起走。">
+    <img class="line_icon" src="./line_icon.svg"/>
+    </a> -->
     <a href="http://line.naver.jp/R/msg/text/?我最近看了本好書《峰值體驗》，為經營品牌、增長品牌價值開拓新視野，值得一看，想與你分享。%0A%0A因為你是重要好友，「唯一」的分享名額自然想到你。%0A%0A讓我們在品牌發展路上、學習路上，一起走。%0D%0Ahttps://forms.gle/J3JTXA2Mx6UcX9Wv5">
     <img class="line_icon" src="./line_icon.svg"/>
     </a>
