--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <img class="line_icon" src="./line_icon.svg"/>
     </a>
     <div class="message">
-      點選 Line 分享連結後，您可以選擇一位好友，<br>
+      點選 Line 分享連結後，<br>
+      您可以選擇一位好友，<br>
       將收禮資訊傳送給他，<br>
       順道附上對好友一年來的感謝
     </div>
